tests/type/non_bool_bang_unary.rev
print !1 // error: can't use '!' token on anything other than a bool value